# comic2

./: .gitignore  ANNOTATION_GUIDE.md  CMakeLists.txt  CORE_ENGINE.md  FUNCTION_MAP.md  IMPLEMENTATION_NOTES_7_5.md  Makefile  PLAN.md  README.md  README2.md  REVERSE_ENGINEERING_GUIDE.md  comic2.asm  fix_remaining_functions.py  unpacked.exe.test.c
.github/: copilot-instructions.md
.github/agents/: code-review-agent.md
.github/workflows/: code-quality.yml  cppcheck.Dockerfile  reimpl-ci.yml
docs/: README.md  REORGANIZATION_SUMMARY.md  SDL2_INTEGRATION.md  SDL2_QUICKSTART.md
include/comic2/: bootstrap.hpp  default_handlers.hpp  dispatcher.hpp  entity_runtime.hpp  game_state.hpp  player_controller.hpp  projectiles.hpp  renderer.hpp  renderer_validation.hpp  resource_formats.hpp  resource_loader.hpp  room_loader.hpp  tile_collision.hpp  types.hpp
reference/comic/: R3_levels.asm  R5sw1991.asm
reference/comic2/: REVERSE_ENGINEERING_GUIDE.md  comic2.asm
reimpl/: .gitignore  CMakeLists.txt  README.md
reimpl/docs/: PHASE_7.6_SUMMARY.md  README.md  REORGANIZATION_SUMMARY.md  SDL2_INTEGRATION.md  SDL2_QUICKSTART.md
reimpl/include/comic2/: default_handlers.hpp  dispatcher.hpp  entity_runtime.hpp  game_state.hpp  player_controller.hpp  projectiles.hpp  renderer.hpp  resource_formats.hpp  resource_loader.hpp  room_loader.hpp  tile_collision.hpp  types.hpp
reimpl/src/: default_handlers.cpp  dispatcher.cpp  entity_runtime.cpp  player_controller.cpp  projectiles.cpp  renderer.cpp  renderer_demo.cpp  renderer_validation.cpp  resource_loader.cpp  room_loader.cpp  tile_collision.cpp
reimpl/tests/: dispatcher_tests.cpp  player_controller_tests.cpp  renderer_tests.cpp  renderer_validation_tests.cpp  resource_loader_tests.cpp  subsystem_scaffold_tests.cpp  tile_collision_tests.cpp  unit_tests_main.cpp
src/: bootstrap.cpp  default_handlers.cpp  dispatcher.cpp  entity_runtime.cpp  game_state.cpp  main.cpp  player_controller.cpp  projectiles.cpp  renderer.cpp  renderer_demo.cpp  renderer_validation.cpp  resource_loader.cpp  room_loader.cpp  tile_collision.cpp
tests/: bootstrap_wiring_tests.cpp  dispatcher_tests.cpp  dosbox_deterministic.conf  integration_gates_tests.cpp  player_controller_tests.cpp  renderer_tests.cpp  renderer_validation_tests.cpp  run_dosbox.sh  subsystem_scaffold_tests.cpp  tile_collision_tests.cpp  unit_tests_main.cpp
tools/: review_agent.sh
tools/djlink/: .gitignore  makefile  out.cc
